Fix #98: Upgrade JRE from 17 to 21